# Rust

./: Cargo.toml  LICENSE  README.md
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  publish.yml
src/: easy.rs  lib.rs  medium.rs  utils.rs
tests/: easy_tests.rs  medium_tests.rs
