[package]
name = "rsleetcode"
version = "0.0.3"
edition = "2021"
repository = "https://github.com/LeetCode-Packages/Rust"
license-file = "LICENSE"
readme = "README.md"
description = "Implementations of LeetCode problem solutions in Rust"
homepage = "https://github.com/LeetCode-Packages/Rust"
keywords = ["leetcode"]
exclude = [".github/*"]

[dependencies]
